--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Resume - Start Bootstrap Theme</title>
+  <title>K.McCarthy</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,7 +27,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Clarence Taylor</span>
+      <span class="d-block d-lg-none">Kevin McCarthy</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
       </span>
@@ -52,9 +52,9 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </nav>
@@ -63,26 +63,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">Clarence
-          <span class="text-primary">Taylor</span>
+        <h1 class="mb-0">Kevin
+          <span class="text-primary">McCarthy</span>
         </h1>
-        <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-          <a href="mailto:name@email.com">name@email.com</a>
+        <div class="subheading mb-5">Richmond, VA 23221 · (804) 929-1184 ·
+          <a href="mailto:name@email.com">km.mccarthy11@email.com</a>
         </div>
         <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
         <div class="social-icons">
-          <a href="#">
+          <a href="http://www.linkedin.com/in/kevinmccarthy0101">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
+          <a href="https://github.com/kmccarthy1">
             <i class="fab fa-github"></i>
           </a>
-          <a href="#">
+          <a href="https://twitter.com/KMcCarthy0101">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="#">
+          <!-- <a href="#">
             <i class="fab fa-facebook-f"></i>
-          </a>
+          </a> -->
         </div>
       </div>
     </section>
@@ -115,7 +115,7 @@
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+        <!-- <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Junior Web Designer</h3>
             <div class="subheading mb-3">Shout! Media Productions</div>
@@ -124,9 +124,9 @@
           <div class="resume-date text-md-right">
             <span class="text-primary">July 2010 - December 2011</span>
           </div>
-        </div>
+        </div> -->
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+        <!-- <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
             <h3 class="mb-0">Web Design Intern</h3>
             <div class="subheading mb-3">Shout! Media Productions</div>
@@ -135,7 +135,7 @@
           <div class="resume-date text-md-right">
             <span class="text-primary">September 2008 - June 2010</span>
           </div>
-        </div>
+        </div> -->
 
       </div>
 
@@ -149,24 +149,23 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <h3 class="mb-0">University of Richmond</h3>
+            <div class="subheading mb-3">Full Stack Web Developer Bootcamp</div>
+            <div>A course of real-world experience, presented by the University of Richmond School of Professional & Continuing Studies, teaching best coding practices and developing skills necessary to build dynamic web applications while gaining proficiency in theory and application of web development.</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">July 2019 - Feb 2020</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+            <h3 class="mb-0">University of Mary Washington</h3>
+            <div class="subheading mb-3">BA in Geography, GIS</div>
+            <div>Select classes: GIS Programming (Python), Introduction to GIS and Cartography, Spatial Analysis with GIS, Remote Sensing and Air Photo Interpretation, and an internship with the Military Affairs Council in the Fredericksburg Regional Chamber of Commerce. During the internship, a team of analysts studied several encroachment factors of military bases in the area and presented our findings to the council.  </div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+            <span class="text-primary">August 2013 - May 2017</span>
           </div>
         </div>
 
@@ -190,19 +189,19 @@
           <li class="list-inline-item">
             <i class="fab fa-js-square"></i>
           </li>
-          <li class="list-inline-item">
+          <!-- <li class="list-inline-item">
             <i class="fab fa-angular"></i>
-          </li>
+          </li> -->
           <li class="list-inline-item">
             <i class="fab fa-react"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-node-js"></i>
           </li>
-          <li class="list-inline-item">
+          <!-- <li class="list-inline-item">
             <i class="fab fa-sass"></i>
-          </li>
-          <li class="list-inline-item">
+          </li> -->
+          <!-- <li class="list-inline-item">
             <i class="fab fa-less"></i>
           </li>
           <li class="list-inline-item">
@@ -213,7 +212,7 @@
           </li>
           <li class="list-inline-item">
             <i class="fab fa-grunt"></i>
-          </li>
+          </li> -->
           <li class="list-inline-item">
             <i class="fab fa-npm"></i>
           </li>
@@ -242,14 +241,19 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+        <p>Apart from being a web developer, I enjoy most of my time being outdoors. I enjoy running (trails 
+          and road) as well as biking. I ran competitively for my high school and collegiate teams and have continued 
+          that racing streak with mulitple half-marathons & 10ks recently and a full marathon somewhere on the horizon. 
+        </p>
+        <!-- <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies 
+          and television shows, I am an aspiring chef, and I spend a large amount of my free time 
+          exploring the latest technology advancements in the front-end web development world.</p> -->
       </div>
     </section>
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
+    <!-- <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
         <h2 class="mb-5">Awards &amp; Certifications</h2>
         <ul class="fa-ul mb-0">
@@ -281,7 +285,7 @@
             Place - James Buchanan High School - Hackathon 2005</li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
   </div>
 
