--- a/index.html
+++ b/index.html
@@ -70,10 +70,8 @@
           <a href="mailto:name@email.com">km.mccarthy11@email.com</a>
         </div>    
         <p class="lead mb-5">I'm a Web Developer and GIS Professional with a passion
-          for programming a thirst for continued knowledge. Follow me on the platforms below and let's get connected!  </p>
-        <!-- <p class="lead mb-5">I am experienced in leveraging agile frameworks to
-           provide a robust synopsis for high level overviews. Iterative approaches
-            to corporate strategy foster collaborative thinking to further the overall value proposition.</p> -->
+          for programming a thirst for continued knowledge. Follow me on the platforms
+           below and let's get connected!  </p>
         <div class="social-icons">
           <a href="http://www.linkedin.com/in/kevinmccarthy0101">
             <i class="fab fa-linkedin-in"></i>
