--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           </li>
         </ul>
 
-        <div class="subheading mb-3">Workflow</div>
+        <!-- <div class="subheading mb-3">Workflow</div>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
@@ -216,7 +216,7 @@
           <li>
             <i class="fa-li fa fa-check"></i>
             Agile Development &amp; Scrum</li>
-        </ul>
+        </ul> -->
       </div>
     </section>
 
