--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
           <a class="nav-link js-scroll-trigger" href="#about">About</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
         <li class="nav-item">
@@ -70,7 +73,7 @@
           <a href="mailto:name@email.com">km.mccarthy11@email.com</a>
         </div>    
         <p class="lead mb-5">I'm a Web Developer and GIS Professional with a passion
-          for programming a thirst for continued knowledge. Follow me on the platforms
+          for programming and a thirst for continued knowledge. Follow me on the platforms
            below and let's get connected!  </p>
         <div class="social-icons">
           <a href="http://www.linkedin.com/in/kevinmccarthy0101">
@@ -86,6 +89,37 @@
             <i class="fab fa-facebook-f"></i>
           </a> -->
         </div>
+      </div>
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
+      <div class="w-100">
+        <h2 class="mb-5">Projects</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">University of Richmond</h3>
+            <div class="subheading mb-3">Full Stack Web Developer Bootcamp</div>
+            <div>A course of real-world experience, presented by the University of Richmond School of Professional & Continuing Studies, teaching best coding practices and developing skills necessary to build dynamic web applications while gaining proficiency in theory and application of web development.</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">July 2019 - Feb 2020</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">University of Mary Washington</h3>
+            <div class="subheading mb-3">BA in Geography, GIS</div>
+            <div>Select classes: GIS Programming (Python), Introduction to GIS and Cartography, Spatial Analysis with GIS, Remote Sensing and Air Photo Interpretation, and an internship with the Military Affairs Council in the Fredericksburg Regional Chamber of Commerce. During the internship, a team of analysts studied several encroachment factors of military bases in the area and presented our findings to the council.  </div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2013 - May 2017</span>
+          </div>
+        </div>
+
       </div>
     </section>
 
