updating projects, autoscroll maybe

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
     <!-- Custom styles for this template -->
     <link href="css/resume.min.css" rel="stylesheet">
-    <script type="text/javascript" src="/js/slideshow.js"></script>
+    <link href="css/resume2.css" rel="stylesheet">
+
+    <!-- <script type="text/javascript" src="/js/slideshow.js"></script> -->
 
 </head>
 
@@ -41,10 +43,10 @@
                     <a class="nav-link js-scroll-trigger" href="#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+                    <a class="nav-link js-scroll-trigger" href="#education">Education</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+                    <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
@@ -52,9 +54,9 @@
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
-                </li>
+                </li> -->
                 <!-- <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
         </li> -->
@@ -64,15 +66,16 @@
 
     <div class="container-fluid p-0">
 
-        <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
+        <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about ">
             <div class="w-100">
                 <h1 class="mb-0">Kevin
                     <span class="text-primary">McCarthy</span>
                 </h1>
                 <div class="subheading mb-5">Richmond, VA 23221 · (804) 929-1184 ·
-                    <a href="mailto:name@email.com">km.mccarthy11@email.com</a>
+                    <a href="mailto:name@email.com">km.mccarthy11@gmail.com</a>
                 </div>
-                <p class="lead mb-5">I'm a Web Developer and GIS Professional with a passion for programming and a thirst for continued knowledge. Follow me on the platforms below and let's get connected! </p>
+                <p class="lead mb-5">I'm a Web Developer and GIS Professional with a passion for programming and a thirst for continued knowledge. I try to spend as much time outside as possible, as I'm an avid runner and a novice cyclist. Both activitites challenge me mentally
+                    and physically while keeping me motivated. Currently, I'm working towards successfully racing my first marathon Fall 2020. <br><br> Follow me on the platforms below and let's get connected! </p>
                 <div class="social-icons">
                     <a href="http://www.linkedin.com/in/kevinmccarthy0101">
                         <i class="fab fa-linkedin-in"></i>
@@ -91,41 +94,31 @@
         </section>
 
         <hr class="m-0">
+        <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education ">
+            <div class="w-100 ">
+                <h2 class="mb-5 ">Education</h2>
 
-        <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
-            <div class="w-100">
-                <h2 class="mb-5">Projects</h2>
-
-            </div>
-        </section>
-
-        <hr class="m-0">
-
-        <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
-            <div class="w-100">
-                <h2 class="mb-5">Education</h2>
-
-                <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-                    <div class="resume-content">
-                        <h3 class="mb-0">University of Richmond</h3>
-                        <div class="subheading mb-3">Full Stack Web Developer Bootcamp</div>
+                <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 ">
+                    <div class="resume-content ">
+                        <h3 class="mb-0 ">University of Richmond</h3>
+                        <div class="subheading mb-3 ">Full Stack Web Developer Bootcamp</div>
                         <div>A course of real-world experience, presented by the University of Richmond School of Professional & Continuing Studies, teaching best coding practices and developing skills necessary to build dynamic web applications while gaining
                             proficiency in theory and application of web development.</div>
                     </div>
-                    <div class="resume-date text-md-right">
-                        <span class="text-primary">July 2019 - Feb 2020</span>
+                    <div class="resume-date text-md-right ">
+                        <span class="text-primary ">July 2019 - Feb 2020</span>
                     </div>
                 </div>
 
-                <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-                    <div class="resume-content">
-                        <h3 class="mb-0">University of Mary Washington</h3>
-                        <div class="subheading mb-3">BA in Geography, GIS</div>
+                <div class="resume-item d-flex flex-column flex-md-row justify-content-between ">
+                    <div class="resume-content ">
+                        <h3 class="mb-0 ">University of Mary Washington</h3>
+                        <div class="subheading mb-3 ">BA in Geography, GIS Certificate</div>
                         <div>Select classes: GIS Programming (Python), Introduction to GIS and Cartography, Spatial Analysis with GIS, Remote Sensing and Air Photo Interpretation, and an internship with the Military Affairs Council in the Fredericksburg Regional
                             Chamber of Commerce. During the internship, a team of analysts studied several encroachment factors of military bases in the area and presented our findings to the council. </div>
                     </div>
-                    <div class="resume-date text-md-right">
-                        <span class="text-primary">August 2013 - May 2017</span>
+                    <div class="resume-date text-md-right ">
+                        <span class="text-primary ">August 2013 - May 2017</span>
                     </div>
                 </div>
 
@@ -133,16 +126,41 @@
         </section>
 
 
-        <hr class="m-0">
+        <hr class="m-0 ">
 
-        <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
-            <div class="w-100">
-                <h2 class="mb-5">Experience</h2>
+        <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects ">
+            <div class="w-100" ">
+                <h2 class="mb-5 ">Projects</h2>
+                <div class="row ">
+                    <div class="projectBox " style="float: left; ">
 
-                <div class="resume-item d-flex flex-column flex-md-row">
-                    <div class="resume-content">
-                        <h3 class="mb-0">GIS Analyst</h3>
-                        <div class="subheading mb-3">EEE Consulting, Inc.</div>
+                        <a href="https://github.com/kmccarthy1/React-Minesweeper ">
+                            <img src="/img/minesweepCoin.jpg " alt="MineSweep " style="height: 100%; width: 100%;border-radius: 10%; " class="rounded-corners ">
+                            <h3 class="caption ">MineSweeper</h3>
+                        </a>
+
+                    </div>
+                    <br>
+                    <div class="projectBox " style="float: left; ">
+                        <img src="/img/minesweepCoin.jpg " alt="MineSweep " style="height: 100%; width: 100%;border-radius: 10% ">
+
+                    </div>
+
+                </div>
+            </div>
+          </section>
+        
+
+        <hr class="m-0 ">
+
+        <section class="resume-section p-3 p-lg-5 d-flex justify-content-center " id="experience ">
+            <div class="w-100 ">
+                <h2 class="mb-5 ">Experience</h2>
+
+                <div class="resume-item d-flex flex-column flex-md-row ">
+                    <div class="resume-content ">
+                        <h3 class="mb-0 ">GIS Analyst</h3>
+                        <div class="subheading mb-3 ">EEE Consulting, Inc.</div>
                         <ul>
                             <li>Maintained geospatial data through an SDE Geodatabase and designed database structures</li>
                             <li> Preformed impact analysis on large-scale public transportation improvement projects</li>
@@ -150,115 +168,112 @@
                             <li>Supplied mapping and GPS support on wetland delineation projects</li>
                         </ul>
                     </div>
-                    <div class="resume-date text-md-right">
-                        <span class="text-primary">July 2017 - June 2019</span>
+                    <div class="resume-date text-md-right ">
+                        <span class="text-primary ">July 2017 - June 2019</span>
                     </div>
                 </div>
 
-                <!-- <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
+                <!-- <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 ">
+          <div class="resume-content ">
+            <h3 class="mb-0 ">Web Developer</h3>
+            <div class="subheading mb-3 ">Intelitec Solutions</div>
             <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
           </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
+          <div class="resume-date text-md-right ">
+            <span class="text-primary ">December 2011 - March 2013</span>
           </div>
         </div> -->
             </div>
         </section>
 
-        <hr class="m-0">
+        <hr class="m-0 ">
 
-        <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
-            <div class="w-100">
-                <h2 class="mb-5">Skills</h2>
+        <section class="resume-section p-3 p-lg-5 d-flex align-items-center " id="skills ">
+            <div class="w-100 ">
+                <h2 class="mb-5 ">Skills</h2>
 
-                <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-                <ul class="list-inline dev-icons">
-                    <li class="list-inline-item">
-                        <i class="fab fa-html5"></i>
+                <div class="subheading mb-3 ">Programming Languages &amp; Tools</div>
+                <ul class="list-inline dev-icons ">
+                    <li class="list-inline-item ">
+                        <i class="fab fa-html5 "></i>
                     </li>
-                    <li class="list-inline-item">
-                        <i class="fab fa-css3-alt"></i>
+                    <li class="list-inline-item ">
+                        <i class="fab fa-css3-alt "></i>
                     </li>
-                    <li class="list-inline-item">
-                        <i class="fab fa-js-square"></i>
+                    <li class="list-inline-item ">
+                        <i class="fab fa-js-square "></i>
                     </li>
-                    <!-- <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
+                    <!-- <li class="list-inline-item ">
+            <i class="fab fa-angular "></i>
           </li> -->
-                    <li class="list-inline-item">
-                        <i class="fab fa-react"></i>
+                    <li class="list-inline-item ">
+                        <i class="fab fa-react "></i>
                     </li>
-                    <li class="list-inline-item">
-                        <i class="fab fa-node-js"></i>
+                    <li class="list-inline-item ">
+                        <i class="fab fa-node-js "></i>
                     </li>
-                    <!-- <li class="list-inline-item">
-            <i class="fab fa-sass"></i>
+                    <!-- <li class="list-inline-item ">
+            <i class="fab fa-sass "></i>
           </li> -->
-                    <!-- <li class="list-inline-item">
-            <i class="fab fa-less"></i>
+                    <!-- <li class="list-inline-item ">
+            <i class="fab fa-less "></i>
           </li>
-          <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
+          <li class="list-inline-item ">
+            <i class="fab fa-wordpress "></i>
           </li>
-          <li class="list-inline-item">
-            <i class="fab fa-gulp"></i>
+          <li class="list-inline-item ">
+            <i class="fab fa-gulp "></i>
           </li>
-          <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
+          <li class="list-inline-item ">
+            <i class="fab fa-grunt "></i>
           </li> -->
-                    <li class="list-inline-item">
-                        <i class="fab fa-npm"></i>
+                    <li class="list-inline-item ">
+                        <i class="fab fa-npm "></i>
                     </li>
                 </ul>
 
-                <!-- <div class="subheading mb-3">Workflow</div>
-        <ul class="fa-ul mb-0">
+                <!-- <div class="subheading mb-3 ">Workflow</div>
+        <ul class="fa-ul mb-0 ">
           <li>
-            <i class="fa-li fa fa-check"></i>
+            <i class="fa-li fa fa-check "></i>
             Mobile-First, Responsive Design</li>
           <li>
-            <i class="fa-li fa fa-check"></i>
+            <i class="fa-li fa fa-check "></i>
             Cross Browser Testing &amp; Debugging</li>
           <li>
-            <i class="fa-li fa fa-check"></i>
+            <i class="fa-li fa fa-check "></i>
             Cross Functional Teams</li>
           <li>
-            <i class="fa-li fa fa-check"></i>
+            <i class="fa-li fa fa-check "></i>
             Agile Development &amp; Scrum</li>
         </ul> -->
             </div>
         </section>
 
-        <hr class="m-0">
+        <hr class="m-0 ">
 
-        <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
-            <div class="w-100">
-                <h2 class="mb-5">Interests</h2>
+        <!-- <section class="resume-section p-3 p-lg-5 d-flex align-items-center " id="interests ">
+            <div class="w-100 ">
+                <h2 class="mb-5 ">Interests</h2>
                 <p>Apart from being a web developer, I enjoy most of my time being outdoors. I enjoy running (trails and road) as well as biking. I ran competitively for my high school and collegiate teams and have continued that racing streak with mulitple
                     half-marathons & 10ks recently and a full marathon somewhere on the horizon.
                 </p>
-                <!-- <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies 
-          and television shows, I am an aspiring chef, and I spend a large amount of my free time 
-          exploring the latest technology advancements in the front-end web development world.</p> -->
             </div>
-        </section>
+        </section> -->
 
-        <hr class="m-0">
+        <hr class="m-0 ">
 
     </div>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="vendor/jquery/jquery.min.js "></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js "></script>
 
     <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="vendor/jquery-easing/jquery.easing.min.js "></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/resume.min.js"></script>
+    <script src="js/resume.min.js "></script>
 
 </body>
 
