--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
                     <div class="projectBox " style="float: left; ">
 
                         <a href="https://github.com/kmccarthy1/React-Minesweeper ">
-                            <img src="/img/minesweepCoin.jpg " alt="MineSweep " style="height: 100%; width: 100%;border-radius: 10%; " class="rounded-corners ">
+                            <img src="https://cdn.vox-cdn.com/thumbor/w6-qCwOlMtRj8WAKWgWHH99nvXg=/0x21:699x487/1400x1400/filters:focal(0x21:699x487):format(jpeg)/cdn.vox-cdn.com/assets/1173684/mine_04.jpeg " alt="MineSweep " style="height: 100%; width:
+                100%;border-radius: 10%; " class="rounded-corners ">
                             <h3 class="caption ">MineSweeper</h3>
                         </a>
 
