more image changes

--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
                     </div>
                     <br>
                     <div class="projectBox " style="float: left; ">
-                        <img src="/img/minesweepCoin.jpg " alt="MineSweep " style="height: 100%; width: 100%;border-radius: 10% ">
+                        <img src="https://cdn.vox-cdn.com/thumbor/w6-qCwOlMtRj8WAKWgWHH99nvXg=/0x21:699x487/1400x1400/filters:focal(0x21:699x487):format(jpeg)/cdn.vox-cdn.com/assets/1173684/mine_04.jpeg " alt="MineSweep " style="height: 100%; width:
+                100%;border-radius: 10% ">
 
                     </div>
 
