--- a/index.html
+++ b/index.html
@@ -133,19 +133,24 @@
                 <h2 class="mb-5 ">Projects</h2>
                 <div class="row ">
                     <div class="projectBox " style="float: left; ">
-
-                        <a href="https://github.com/kmccarthy1/React-Minesweeper ">
-                            <img src="https://cdn.vox-cdn.com/thumbor/w6-qCwOlMtRj8WAKWgWHH99nvXg=/0x21:699x487/1400x1400/filters:focal(0x21:699x487):format(jpeg)/cdn.vox-cdn.com/assets/1173684/mine_04.jpeg " alt="MineSweep " style="height: 100%; width:
-                100%;border-radius: 10%; " class="rounded-corners ">
-                            <h3 class="caption ">MineSweeper</h3>
-                        </a>
-
+                      <a href="https://github.com/kmccarthy1/project-3 ">
+                        <img src="img/logo.jpg " alt="MineSweep " style="height: 100%; width: 100%;border-radius: 10% ">
+                      </a>
                     </div>
                     <br>
                     <div class="projectBox " style="float: left; ">
-                        <img src="https://cdn.vox-cdn.com/thumbor/w6-qCwOlMtRj8WAKWgWHH99nvXg=/0x21:699x487/1400x1400/filters:focal(0x21:699x487):format(jpeg)/cdn.vox-cdn.com/assets/1173684/mine_04.jpeg " alt="MineSweep " style="height: 100%; width:
-                100%;border-radius: 10% ">
-
+                      <a href="https://github.com/kmccarthy1/React-Minesweeper ">
+                          <img src="https://cdn.vox-cdn.com/thumbor/w6-qCwOlMtRj8WAKWgWHH99nvXg=/0x21:699x487/1400x1400/filters:focal(0x21:699x487):format(jpeg)/cdn.vox-cdn.com/assets/1173684/mine_04.jpeg " alt="MineSweep " style="height: 100%; width:
+                100%;border-radius: 10%; " class="rounded-corners ">
+                          <h3 class="caption ">MineSweeper</h3>
+                      </a>
+                  </div>
+                  <br>
+                    <div class="projectBox " style="float: left; ">
+                      <a href="https://kmccarthy1.github.io/Giphy/ ">
+                        <img src="https://developers.giphy.com/branch/master/static/api-c99e353f761d318322c853c03ebcf21b.gif " alt="Gif " style="height: 100%; width: 100%;border-radius: 10% ">
+                        <h3 class="caption ">giphy api search</h3>
+                      </a>
                     </div>
 
                 </div>
