job description edit

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                             <li>Maintained geospatial data through an SDE Geodatabase and designed database structures</li>
                             <li> Preformed impact analysis on large-scale public transportation improvement projects</li>
                             <li>Met with clients to discuss products designed to their specific specifications</li>
-                            <li>Supplied mapping and GPS support on wetland delineation projects xxxxxxx</li>
+                            <li>Supplied mapping and GPS support on wetland delineation projects</li>
                         </ul>
                     </div>
                     <div class="resume-date text-md-right ">
