old portfolio tweaks

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <h1 class="mb-0">Kevin
                     <span class="text-primary">McCarthy</span>
                 </h1>
-                <div class="subheading mb-5">Richmond, VA 23221 · (804) 929-1184 ·
+                <div class="subheading mb-5">Richmond, VA 23221 ·
                     <a href="mailto:name@email.com">km.mccarthy11@gmail.com</a>
                 </div>
                 <p class="lead mb-5">I'm a Web Developer and GIS Professional with a passion for programming and a thirst for continued knowledge. I try to spend as much time outside as possible, as I'm an avid runner and a novice cyclist. Both activitites challenge me mentally
